--- a/Front/autostop/src/pages/home/connexion/main/map/map.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/map.html
@@ -1,18 +1,13 @@
-<!--
-  Generated template for the MapPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>map</ion-title>
+    <ion-title>AutoStop</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+  <div id="map"></div>
 </ion-content>
