--- a/Front/autostop/src/pages/home/home.html
+++ b/Front/autostop/src/pages/home/home.html
@@ -11,4 +11,11 @@
   <p>
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
   </p>
+
+  <button ion-button
+          round
+          color="dark"
+          icon-start
+          [navPush]="map">
+      <ion-icon name="map"></ion-icon>Geolocation</button>
 </ion-content>
