--- a/Front/autostop/src/pages/home/connexion/main/map/map.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/map.html
@@ -1,13 +1,6 @@
 
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>AutoStop</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-  <div id="map"></div>
+<ion-content>
+  <div id="map">
+      <page-search-bar></page-search-bar>
+  </div>
 </ion-content>
