--- a/Front/autostop/src/pages/home/connexion/main/map/search-bar/search-bar.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/search-bar/search-bar.html
@@ -1,18 +1,21 @@
-<!--
-  Generated template for the SearchBarPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
+<ion-toolbar color="transparent">
+  <div class="searchbar">
+    <ion-row>
+      <ion-col col-auto no-padding>
+        <button ion-button icon-only clear color="white">
+          <ion-icon name="menu" color="dark"></ion-icon>
+        </button>
+      </ion-col>
+      <ion-col no-padding >
+        <ion-input #search type="search" name="search" placeholder="search"></ion-input>
+      </ion-col>
+      <ion-col col-auto no-padding>
+        <button ion-button icon-only clear color="light"(click)="submitSearch(search.value)">
+          <ion-icon name="search" color="dark"></ion-icon>
+        </button>
+      </ion-col>
+    </ion-row>
+  </div>
+</ion-toolbar>
 
-  <ion-navbar>
-    <ion-title>search-bar</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-
-</ion-content>
