radius bar added in profile menu

--- a/Front/autostop/src/pages/home/connexion/main/menu/tabs/profile/distance/distance.html
+++ b/Front/autostop/src/pages/home/connexion/main/menu/tabs/profile/distance/distance.html
@@ -1,18 +1,9 @@
-<!--
-  Generated template for the DistancePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>distance</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
 <ion-content padding>
-
+  <ion-item>
+    <ion-label step=100, snaps>radius variable value : {{ radius }} meters</ion-label>
+    <ion-range min="100" max="5000" step="100" [(ngModel)]="radius">
+      <ion-icon small range-left name="expand"></ion-icon>
+      <ion-icon range-right name="expand"></ion-icon>
+    </ion-range>
+  </ion-item>
 </ion-content>
