modal request added stars in progress

--- a/Front/autostop/src/pages/home/connexion/main/map/map.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/map.html
@@ -1,4 +1,8 @@
 <ion-content>
+    <button ion-button id="button" (click)="goToSpecificLocation()">Home</button>
+
+    <button ion-button id="button" (click)="showMatchModal()">Possible Match Route</button>
+
   <div id="map">
       <page-search-bar></page-search-bar>
   </div>
