--- a/Front/autostop/src/pages/home/connexion/main/map/request-modal/request-modal.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/request-modal/request-modal.html
@@ -1,18 +1,47 @@
-<!--
-  Generated template for the RequestModalPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>request-modal</ion-title>
+    <ion-title >{{ matchableUser.name }}  {{ matchableUser.surname }}</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
 <ion-content padding>
+
+  <ion-grid>
+
+    <ion-row>
+      <ion-col>
+        <ion-avatar>
+          <img class="avatarUser" src="./assets/imgs/darmon.jpg">
+      </ion-avatar>
+      </ion-col>
+      <ion-col>
+          <div>
+              <ion-icon name="star" *ngFor="let num of [1,2,3,4,5]"
+                 [ngStyle]="{'color' : matchableUser.rate}"
+              ></ion-icon>
+            </div>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col>
+        <h3>Se rend à :</h3>
+        <p><ion-icon name="locate"></ion-icon>
+            {{ matchableUser.destination }}
+        </p>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col >
+        <button ion-button round color="button" (click)="sendRequest()">Envoyer une demande</button>
+      </ion-col>
+      <ion-col >
+        <button ion-button round color="danger" (click)="closeModal()">Annuler</button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
 </ion-content>
