--- a/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/linking/give-rating/give-rating.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/linking/give-rating/give-rating.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the GiveRatingPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -14,5 +8,15 @@
 
 
 <ion-content padding>
+  <h2>Note ton trajet avec {{ matchableUser.name }} {{ matchableUser.surname }}</h2>
+    <ion-avatar>
+      <img class="avatarUser" src="./assets/imgs/darmon.jpg">
+  </ion-avatar>
+    <div>
+        <ion-icon name="star" *ngFor="let num of [1,2,3,4,5]"
+          (click)="rate(num)" [ngStyle]="{'color' :getColor(num)}"
+        ></ion-icon>
+      </div>
+    {{ rating }}
 
 </ion-content>
