--- a/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/response-modal.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/response-modal.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the ResponseModalPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -14,5 +8,28 @@
 
 
 <ion-content padding>
+
+  <h2>Votre demande a bien été envoyée à : {{ matchableUser.name }}  {{ matchableUser.surname }}</h2>
+  <ion-grid>
+    <ion-row>
+        <ion-col>
+          <ion-avatar>
+            <img class="avatarUser" src="./assets/imgs/darmon.jpg">
+        </ion-avatar>
+        </ion-col>
+        <ion-col>
+            <div>
+                <ion-icon name="star"
+                          *ngFor="let num of [1,2,3,4,5]"
+                          [ngStyle]="{color: getColor(num)}">
+                </ion-icon>
+              </div>
+        </ion-col>
+      </ion-row>
+  </ion-grid>
+  <button ion-button round color="button" (click)="goToLinking()">RequestAccepted [DEVBUT]</button>
+  <button ion-button round color="danger" (click)="cancelRequest()">Annuler</button>
+
+
 
 </ion-content>
