requestModalv1 + answer + rating

--- a/Front/autostop/src/pages/home/connexion/main/map/map.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/map.html
@@ -1,5 +1,6 @@
 <ion-content>
-  <button ion-button id="button" (click)="showMatchModal()"> Matchable User [DevBut]</button>
+  <!-- <button ion-button id="button" (click)="showMatchModal()"> Matchable User [DevBut]</button> -->
+
   <div id="map">
       <page-search-bar></page-search-bar>
   </div>
