--- a/Front/autostop/src/pages/home/connexion/main/menu/tabs/tabs.html
+++ b/Front/autostop/src/pages/home/connexion/main/menu/tabs/tabs.html
@@ -3,7 +3,7 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-tabs selectedIndex="2">
+  <ion-tabs color="menu" selectedIndex="2">
     <ion-tab [root]="tab1Root" tabIcon="star"></ion-tab>
     <ion-tab [root]="tab2Root" tabIcon="car"></ion-tab>
     <ion-tab [root]="tab3Root" tabIcon="person"></ion-tab>
