--- a/Front/autostop/src/pages/home/lost-password/lost-password.html
+++ b/Front/autostop/src/pages/home/lost-password/lost-password.html
@@ -1,18 +1,5 @@
-<!--
-  Generated template for the LostPasswordPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>lost-password</ion-title>
-  </ion-navbar>
-
+  <ion-navbar> <ion-title>lost-password</ion-title> </ion-navbar>
 </ion-header>
 
-
-<ion-content padding>
-
-</ion-content>
+<ion-content padding> <p>fallait le noter sur un papier</p> </ion-content>
