object classes added in typescript

--- a/Front/autostop/src/pages/home/connexion/main/map/request-modal/request-modal.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/request-modal/request-modal.html
@@ -1,7 +1,7 @@
 
 <ion-header>
   <ion-navbar>
-    <ion-title >{{ matchableUser.name }}  {{ matchableUser.surname }}</ion-title>
+    <ion-title >{{ matchableUser.lastName }}  {{ matchableUser.firstName }}</ion-title>
   </ion-navbar>
 </ion-header>
 
