--- a/Front/autostop/src/pages/home/lost-password/lost-password.html
+++ b/Front/autostop/src/pages/home/lost-password/lost-password.html
@@ -2,4 +2,4 @@
   <ion-navbar> <ion-title>lost-password</ion-title> </ion-navbar>
 </ion-header>
 
-<ion-content padding> <p>fallait le noter sur un papier</p> </ion-content>
+<ion-content padding> </ion-content>
