--- a/Front/autostop/src/pages/home/register/register.html
+++ b/Front/autostop/src/pages/home/register/register.html
@@ -13,42 +13,42 @@
     <ion-item>
       <ion-input
         type="text"
-        formControlName="prenom"
+        formControlName="firstName"
         placeholder="Prénom"
       ></ion-input>
     </ion-item>
     <ion-item>
       <ion-input
         type="text"
-        formControlName="nom"
+        formControlName="lastName"
         placeholder="Nom"
       ></ion-input>
     </ion-item>
     <ion-item>
       <ion-input
         type="text"
-        formControlName="telephone"
+        formControlName="phone"
         placeholder="Téléphone"
       ></ion-input>
     </ion-item>
     <ion-item>
       <ion-input
         type="text"
-        formControlName="sexe"
+        formControlName="sex"
         placeholder="Sexe"
       ></ion-input>
     </ion-item>
     <ion-item>
       <ion-input
         type="text"
-        formControlName="birthday"
+        formControlName="dateOfBirth"
         placeholder="Date de Naissance"
       ></ion-input>
     </ion-item>
     <ion-item>
       <ion-input
         type="text"
-        formControlName="email"
+        formControlName="mail"
         placeholder="E-mail"
       ></ion-input>
     </ion-item>
