--- a/Front/autostop/src/pages/home/connexion/main/map/search-bar/search-bar.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/search-bar/search-bar.html
@@ -18,6 +18,7 @@
           type="search"
           name="search"
           placeholder="search"
+          (keyup.enter)="submitSearch(search.value)"
         ></ion-input>
       </ion-col>
       <ion-col col-auto no-padding>
