--- a/Front/autostop/src/pages/home/home.html
+++ b/Front/autostop/src/pages/home/home.html
@@ -1,11 +1,13 @@
-<ion-content padding color="acceuil" class="home">
-  <div><img src="../assets/imgs/logo.png" id="logo" /></div>
-  <div><ion-icon name="mail">VIA EMAIL</ion-icon></div>
+<ion-content padding class="home">
+  <div id="logo"><img src="../assets/imgs/logo.png" id="logo" /></div>
+  <!-- <div>
+    <ion-icon name="mail">VIA EMAIL</ion-icon>
+  </div> -->
 
-  <div class="container">
+  <div class="container" padding>
     <div>
       <button ion-button full color="button" [navPush]="register">
-        CREER UN COMPTE
+        CRÉER UN COMPTE
       </button>
     </div>
 
