--- a/Front/autostop/src/pages/home/register/register.html
+++ b/Front/autostop/src/pages/home/register/register.html
@@ -5,70 +5,38 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar> <ion-title>register</ion-title> </ion-navbar>
+  <ion-navbar>
+    <ion-title>register</ion-title>
+  </ion-navbar>
 </ion-header>
 
 <ion-content padding>
   <form [formGroup]="register">
     <ion-item>
-      <ion-input
-        type="text"
-        formControlName="firstName"
-        placeholder="Prénom"
-      ></ion-input>
+      <ion-input type="text" formControlName="lastName" placeholder="Nom">
+      </ion-input>
     </ion-item>
     <ion-item>
-      <ion-input
-        type="text"
-        formControlName="lastName"
-        placeholder="Nom"
-      ></ion-input>
+      <ion-input type="text" formControlName="firstName" placeholder="Prénom"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-input
-        type="text"
-        formControlName="phone"
-        placeholder="Téléphone"
-      ></ion-input>
+      <ion-input type="text" formControlName="phone" placeholder="Téléphone"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-input
-        type="text"
-        formControlName="sex"
-        placeholder="Sexe"
-      ></ion-input>
+      <ion-input type="text" formControlName="sex" placeholder="Sexe"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-input
-        type="text"
-        formControlName="dateOfBirth"
-        placeholder="Date de Naissance"
-      ></ion-input>
+      <ion-input type="text" formControlName="dateOfBirth" placeholder="Date de Naissance"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-input
-        type="text"
-        formControlName="mail"
-        placeholder="E-mail"
-      ></ion-input>
+      <ion-input type="text" formControlName="mail" placeholder="E-mail"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-input
-        type="text"
-        formControlName="password"
-        placeholder="Password"
-      ></ion-input>
+      <ion-input type="text" formControlName="password" placeholder="Password"></ion-input>
     </ion-item>
 
-    <button
-      ion-button
-      full
-      color="button"
-      type="submit"
-      [disabled]="!register.valid"
-      [navPush]="connexion"
-    >
-      CREER
+    <button ion-button full color="button" type="submit" [disabled]="!register.valid" [navPush]="connexion">
+      CRÉER
     </button>
   </form>
 </ion-content>
