--- a/Front/autostop/src/pages/home/home.html
+++ b/Front/autostop/src/pages/home/home.html
@@ -3,18 +3,14 @@
   <!-- <div>
     <ion-icon name="mail">VIA EMAIL</ion-icon>
   </div> -->
-
-  <div class="container" padding>
-    <div>
-      <button ion-button full color="button" [navPush]="register">
-        CRÉER UN COMPTE
-      </button>
-    </div>
-
-    <div>
-      <button ion-button full color="button" [navPush]="connexion">
-        CONNEXION
-      </button>
-    </div>
+  <div id="topButton">
+    <button ion-button full color="button" [navPush]="register">
+      CRÉER UN COMPTE
+    </button>
+  </div>
+  <div id="bottomButton">
+    <button ion-button full color="button" [navPush]="connexion">
+      CONNEXION
+    </button>
   </div>
 </ion-content>
