--- a/Front/autostop/src/pages/home/home.html
+++ b/Front/autostop/src/pages/home/home.html
@@ -1,5 +1,4 @@
-<ion-content padding color="acceuil" class="home">
-  <div><img src="../assets/imgs/logo.png" id="logo" /></div>
+<ion-content padding color="home" class="home">
   <div><ion-icon name="mail">VIA EMAIL</ion-icon></div>
 
   <div class="container">
