--- a/Front/autostop/src/pages/home/connexion/main/map/request-modal/request-modal.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/request-modal/request-modal.html
@@ -1,31 +1,49 @@
-
+<!--
 <ion-header>
   <ion-navbar>
-    <ion-title >{{ matchableUser.lastName }}  {{ matchableUser.firstName }}</ion-title>
+    <ion-title >Conducteur</ion-title>
   </ion-navbar>
 </ion-header>
-
+ -->
 
 <ion-content padding>
-  <ion-row>
-    <ion-col>
-      <img class="avatarUser" src="./assets/imgs/darmon.jpg">
-    </ion-col>
-    <ion-col>
-      <ion-icon name="star"
-      *ngFor="let num of [1,2,3,4,5]"
-      [ngStyle]="{color: getColor(num)}">
-      </ion-icon>
-    </ion-col>
-  </ion-row>
+  <ion-grid>
+      <ion-row>
+          <ion-col col-6 offset-3>
+            <img class="avatarUser" [src]=testImgUrl>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col col-10 offset-3>
+            <h1>{{ matchableUser.lastName }}  {{ matchableUser.firstName }}</h1>
+          </ion-col>
+        </ion-row>
+          <ion-row>
+            <ion-col col-8 offset-3>
+              <img class="stars"
+              [src]="getStar(num)"
+              *ngFor="let num of [1,2,3,4,5]">
+            </ion-col>
+        </ion-row>
+        <ion-row class="goToRow">
+            <ion-col>
+                <h3>Se rend à :</h3>
+                <p><ion-icon name="locate"></ion-icon>
+                    {{ testTrip }}
+                </p>
+            </ion-col>
+        </ion-row>
 
-        <h3>Se rend à :</h3>
-        <p><ion-icon name="locate"></ion-icon>
-            {{ matchableUser.destination }}
-        </p>
+        <ion-row>
+            <ion-col col-10 offset-1>
+                <button ion-button full color="button" (click)="sendRequest()">Envoyer une demande</button>
+            </ion-col>
+        </ion-row>
 
-        <button ion-button round color="button" (click)="sendRequest()">Envoyer une demande</button>
-
-        <button ion-button round color="danger" (click)="closeModal()">Annuler</button>
-
+        <ion-row>
+            <ion-col col-10 offset-1>
+                <button ion-button  full color="danger" (click)="closeModal()">Annuler</button>
+          </ion-col>
+        </ion-row>
+  </ion-grid>
 </ion-content>
