--- a/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/linking/linking.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/linking/linking.html
@@ -1,33 +1,60 @@
-<ion-header>
+<!-- <ion-header>
 
   <ion-navbar>
     <ion-title>linking</ion-title>
   </ion-navbar>
 
 </ion-header>
-
+ -->
 
 <ion-content padding>
 
-    <h2>Votre demande a bien été acceptée par: {{ matchableUser.name }}  {{ matchableUser.surname }}</h2>
     <ion-grid>
-      <ion-row>
-          <ion-col>
-              <img class="avatarUser" src="./assets/imgs/darmon.jpg">
-          </ion-col>
-          <ion-col>
-                  <ion-icon name="star"
-                            *ngFor="let num of [1,2,3,4,5]"
-                            [ngStyle]="{color: getColor(num)}">
-                  </ion-icon>
+        <ion-row>
+          <ion-col col-10 offset-1>
+              <h3>Votre demande a bien été acceptée par {{ matchableUser.lastName }}  {{ matchableUser.firstName }}</h3>
           </ion-col>
         </ion-row>
-    </ion-grid>
-    {{ matchableUser.carName }}
-    {{ matchableUser.plateCar }}
-    {{ matchableUser.phoneNumber }}
-    <button ion-button (click)="goToRate()">
-        Go to RatingPage[DEVBUT]
-      </button>
+          <ion-row>
+              <ion-col col-6 offset-3>
+                  <img class="avatarUser" [src]=testImgUrl>
+              </ion-col>
+            </ion-row>
+          <ion-row>
+            <ion-col col-8 offset-2>
+                <img class="stars"
+                [src]="getStar(num)"
+                *ngFor="let num of [1,2,3,4,5]">
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col col-4 offset-4>
+                <img class="avatarUser" [src]=car.imgCar>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col col-6 offset-3>
+                <h3>{{ car.brand }} {{ car.model }} {{ car.color }}
+                </h3>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+              <ion-col col-10 offset-1>
+                  <button ion-button full color="button" icon-start>
+                      <ion-icon name="call"></ion-icon>Appeller
+                  </button>
+              </ion-col>
+          </ion-row>
 
+          <ion-row>
+              <ion-col col-10 offset-1>
+                  <button ion-button  full color="button" icon-start>
+                      <ion-icon name="mail"></ion-icon>Envoyer un SMS
+                  </button>
+            </ion-col>
+          </ion-row>
+          <button ion-button (click)="goToRate()" icon-start>
+              <ion-icon name="star"></ion-icon>Noter le trajet
+          </button>
+      </ion-grid>
 </ion-content>
