--- a/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/response-modal.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/response-modal.html
@@ -1,31 +1,42 @@
-<ion-header>
+<!-- <ion-header>
 
   <ion-navbar>
-    <ion-title>response-modal</ion-title>
+    <ion-title>Conducteur</ion-title>
   </ion-navbar>
 
 </ion-header>
-
+ -->
 
 <ion-content padding>
 
-  <h2>Votre demande a bien été envoyée à : {{ matchableUser.name }}  {{ matchableUser.surname }}</h2>
   <ion-grid>
     <ion-row>
-        <ion-col>
-            <img class="avatarUser" src="./assets/imgs/darmon.jpg">
+      <ion-col col-10 offset-1>
+          <h3>Votre demande a bien été envoyée à {{ matchableUser.lastName }}  {{ matchableUser.firstName }}</h3>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+        <ion-col col-6 offset-3>
+            <img class="avatarUser" [src]=testImgUrl>
         </ion-col>
-        <ion-col>
-                <ion-icon name="star"
-                          *ngFor="let num of [1,2,3,4,5]"
-                          [ngStyle]="{color: getColor(num)}">
-                </ion-icon>
+      </ion-row>
+    <ion-row>
+        <ion-col col-8 offset-2>
+            <img class="stars"
+            [src]="getStar(num)"
+            *ngFor="let num of [1,2,3,4,5]">
+        </ion-col>
+      </ion-row>
+      <ion-row>
+          <ion-col col-10 offset-1>
+              <button ion-button full color="button" (click)="goToLinking()">Demande acceptée</button>
+          </ion-col>
+      </ion-row>
+
+      <ion-row>
+          <ion-col col-10 offset-1>
+              <button ion-button  full color="danger" (click)="cancelRequest()">Annuler</button>
         </ion-col>
       </ion-row>
   </ion-grid>
-  <button ion-button round color="button" (click)="goToLinking()">RequestAccepted [DEVBUT]</button>
-  <button ion-button round color="danger" (click)="cancelRequest()">Annuler</button>
-
-
-
 </ion-content>
