modif photo menu

--- a/Front/autostop/src/pages/home/connexion/main/main.html
+++ b/Front/autostop/src/pages/home/connexion/main/main.html
@@ -1,7 +1,5 @@
-<ion-menu side="right" [content]="content">
+<ion-menu side="right" [content]="content" background-color="menu">
   <ion-content color="menu">
-    <img src="assets/imgs/staline.jpg" alt="photo" />
-
     <ion-list>
       <button ion-item icon-start color="menu" (click)="onNavigate(tabsPage)">
         MON PROFIL
