Add validators to all input fields on register page

--- a/Front/autostop/src/pages/home/register/register.html
+++ b/Front/autostop/src/pages/home/register/register.html
@@ -38,7 +38,7 @@
       <ion-input type="password" formControlName="passwordConfirmation" placeholder="Confirmer votre mot de passe"></ion-input>
     </ion-item>
 
-    <button ion-button full color="button" type="submit" [disabled]="!register.valid" [navPush]="connexionPage">
+    <button ion-button full color="button" type="submit" [disabled]="!register.valid" [navPush]="main">
       CRÉER
     </button>
   </form>
