avatar menu + opacity circle

--- a/Front/autostop/src/pages/home/connexion/main/main.html
+++ b/Front/autostop/src/pages/home/connexion/main/main.html
@@ -1,6 +1,7 @@
 <ion-menu side="right" [content]="content" background-color="menu">
   <ion-content color="menu">
     <ion-list>
+        <img class="avatarUser" [src]=testImgUrl>
       <button ion-item icon-start color="menu" (click)="onNavigate(tabsPage)">
         MON PROFIL
       </button>
