--- a/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/linking/give-rating/give-rating.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/linking/give-rating/give-rating.html
@@ -33,10 +33,7 @@
   <ion-label>Commentaire</ion-label>
   <ion-textarea [(ngModel)]="comment" name="comment"></ion-textarea>
 </ion-item>
-<button ion-button color="button" block>Envoyer évaluation</button>
-        <!-- <ion-icon name="star" *ngFor="let num of [1,2,3,4,5]"
-          (click)="rate(num)" [ngStyle]="{'color' :getColor(num)}">
-        </ion-icon> -->
+<button ion-button color="button" block [navPush]="main">Envoyer évaluation</button>
 
     {{ rating }}
 
