--- a/Front/autostop/src/pages/home/register/register.html
+++ b/Front/autostop/src/pages/home/register/register.html
@@ -5,9 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar>
-    <ion-title>Créer un compte</ion-title>
-  </ion-navbar>
+  <ion-navbar> <ion-title>Créer un compte</ion-title> </ion-navbar>
 </ion-header>
 
 <ion-content padding class="container">
@@ -17,28 +15,65 @@
       </ion-input>
     </ion-item>
     <ion-item>
-      <ion-input type="text" formControlName="firstName" placeholder="Prénom"></ion-input>
+      <ion-input
+        type="text"
+        formControlName="firstName"
+        placeholder="Prénom"
+      ></ion-input>
     </ion-item>
     <ion-item>
-      <ion-input type="tel" formControlName="phone" placeholder="Téléphone"></ion-input>
+      <ion-input
+        type="tel"
+        formControlName="phone"
+        placeholder="Téléphone"
+      ></ion-input>
     </ion-item>
     <ion-item>
-      <ion-input type="email" formControlName="mail" placeholder="Adresse email"></ion-input>
+      <ion-input
+        type="email"
+        formControlName="mail"
+        placeholder="Adresse email"
+      ></ion-input>
     </ion-item>
     <ion-item>
-      <ion-input type="text" formControlName="sex" placeholder="Sexe"></ion-input>
+      <ion-input
+        type="text"
+        formControlName="sex"
+        placeholder="Sexe"
+      ></ion-input>
     </ion-item>
     <ion-item id="dateOfBirth">
-      <ion-datetime placeholder="Date de naissance" displayFormat="DD/MM/YYYY" min="1918" max="2000-12-07" formControlName="dateOfBirth"></ion-datetime>
+      <ion-datetime
+        placeholder="Date de naissance"
+        displayFormat="DD/MM/YYYY"
+        min="1918"
+        max="2000-12-07"
+        formControlName="dateOfBirth"
+      ></ion-datetime>
     </ion-item>
     <ion-item>
-      <ion-input type="password" formControlName="password" placeholder="Mot de passe"></ion-input>
+      <ion-input
+        type="password"
+        formControlName="password"
+        placeholder="Mot de passe"
+      ></ion-input>
     </ion-item>
-    <ion-item>
-      <ion-input type="password" formControlName="passwordConfirmation" placeholder="Confirmer votre mot de passe"></ion-input>
+    <ion-item color="inputColor()">
+      <ion-input
+        type="password"
+        formControlName="passwordConfirmation"
+        placeholder="Confirmer votre mot de passe"
+      ></ion-input>
     </ion-item>
 
-    <button ion-button full color="button" type="submit" [disabled]="!register.valid" (click)="validateForm(register.value)">
+    <button
+      ion-button
+      full
+      color="button"
+      type="submit"
+      [disabled]="!register.valid"
+      (click)="validateForm(register.value)"
+    >
       CRÉER
     </button>
   </form>
