--- a/Front/autostop/src/pages/home/register/register.html
+++ b/Front/autostop/src/pages/home/register/register.html
@@ -58,7 +58,7 @@
         placeholder="Mot de passe"
       ></ion-input>
     </ion-item>
-    <ion-item color="inputColor()">
+    <ion-item>
       <ion-input
         type="password"
         formControlName="passwordConfirmation"
