Hide scrollbar in pages with no scroll content

--- a/Front/autostop/src/pages/home/register/choice/choice.html
+++ b/Front/autostop/src/pages/home/register/choice/choice.html
@@ -1,12 +1,3 @@
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>Que choisis-tu aujourd'hui ?</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
+<ion-content id="choicePage" padding>
 
 </ion-content>
