--- a/Front/autostop/src/pages/home/register/choice/choice.html
+++ b/Front/autostop/src/pages/home/register/choice/choice.html
@@ -1,23 +1,23 @@
 <ion-content id="choicePage" padding text-center>
   <div id="logo"><img src="../assets/imgs/logo.png" id="logo" /></div>
-  <h3 class="title">Choisis ton mode de déplacement actuel :</h3>
-  <div padding>
+  <h4 class="title" padding>Choisissez votre mode de déplacement actuel :</h4>
+  <div>
     <ion-row>
       <ion-col col-6>
-        <img (click)="choosePedestrianMode()" padding id="handIcon" src="../../../../assets/imgs/choicePage/pedestrianIcon.png" alt="icône piéton">
+        <img class="choiceIcons" (click)="choosePedestrianMode()" src="../../../../assets/imgs/choicePage/pedestrianIcon.png" alt="icône piéton">
       </ion-col>
       <ion-col col-6>
-        <img (click)="chooseDriverMode()" padding id="carIcon" src="../../../../assets/imgs/choicePage/driverIcon.png" alt="icône conducteur">
+        <img class="choiceIcons" (click)="chooseDriverMode()" src="../../../../assets/imgs/choicePage/driverIcon.png" alt="icône conducteur">
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col col-6>
-        <h4>Piéton</h4>
+        <h5>Piéton</h5>
       </ion-col>
       <ion-col col-6>
-        <h4>Conducteur</h4>
+        <h5>Conducteur</h5>
       </ion-col>
     </ion-row>
-    <p>(Tu pourras toujours le modifier dans le menu)</p>
+    <p>(Vous pourrez toujours le modifier dans le menu)</p>
   </div>
 </ion-content>
