Front getting info from database (in console)

--- a/Front/autostop/src/pages/home/register/register.html
+++ b/Front/autostop/src/pages/home/register/register.html
@@ -31,7 +31,7 @@
     <ion-item>
       <ion-input
         type="email"
-        formControlName="mail"
+        formControlName="email"
         placeholder="Adresse email"
       ></ion-input>
     </ion-item>
