--- a/Front/autostop/src/pages/home/connexion/main/menu/help/help.html
+++ b/Front/autostop/src/pages/home/connexion/main/menu/help/help.html
@@ -1,13 +1,8 @@
-<!--
-  Generated template for the HelpPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>help</ion-title>
+    <ion-title>Aide</ion-title>
   </ion-navbar>
 
 </ion-header>
