--- a/Front/autostop/src/pages/home/connexion/main/menu/menu.html
+++ b/Front/autostop/src/pages/home/connexion/main/menu/menu.html
@@ -1,3 +1,3 @@
 <ion-header>
-  <ion-navbar> <ion-title>menu</ion-title> </ion-navbar>
+  <ion-navbar> <ion-title>Menu</ion-title> </ion-navbar>
 </ion-header>
