Corrected a sentence in CGU

--- a/Front/autostop/src/pages/home/connexion/main/menu/legal-notice/legal-notice.html
+++ b/Front/autostop/src/pages/home/connexion/main/menu/legal-notice/legal-notice.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>C.G.V.</ion-title>
+    <ion-title>Conditions Générales d'Utilisation</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -11,7 +11,7 @@
   <article>
     <h5>Préambule</h5>
     <p>L’Application auto-stop installée sur un téléphone mobile
-      « intelligent » de type ou IPhone® (ci-après le « Terminal Mobile »)
+      « intelligent » de type Android ou IPhone® (ci-après le « Terminal Mobile »)
       permet la mise en relation entre les utilisateurs de ces Terminaux Mobiles
       (ci-après les « Utilisateurs ») pour faciliter le partage, pour un trajet
       donné, entre conducteur et passager, d’un mode de transport individuel motorisé
