Reset map on main page

--- a/Front/autostop/src/pages/home/connexion/main/main.html
+++ b/Front/autostop/src/pages/home/connexion/main/main.html
@@ -27,5 +27,4 @@
 
 <ion-nav #content [root]="rootPage"></ion-nav>
 
-<page-search-bar (searchValueEmit)='receiveMessage($event)'></page-search-bar>
-<!-- <page-map></page-map> -->
+<page-map></page-map>
