--- a/Front/autostop/src/pages/home/connexion/main/menu/ratings/ratings.html
+++ b/Front/autostop/src/pages/home/connexion/main/menu/ratings/ratings.html
@@ -1,13 +1,8 @@
-<!--
-  Generated template for the RatingsPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>ratings</ion-title>
+    <ion-title>Évaluez-nous !</ion-title>
   </ion-navbar>
 
 </ion-header>
