Données affichées dans le Front pour un utilisateur (à mettre en forme)

--- a/Front/autostop/src/pages/home/connexion/main/menu/tabs/profile/profile.html
+++ b/Front/autostop/src/pages/home/connexion/main/menu/tabs/profile/profile.html
@@ -1,1 +1,4 @@
-<ion-content padding> <page-distance></page-distance> </ion-content>
+<ion-content padding> 
+        <h2 padding>{{ user1.firstName }}</h2>
+    <page-distance></page-distance> 
+</ion-content>
