--- a/Front/autostop/src/pages/home/connexion/main/menu/contact/contact.html
+++ b/Front/autostop/src/pages/home/connexion/main/menu/contact/contact.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the ContactPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -14,5 +8,6 @@
 
 
 <ion-content padding>
-
+  <p> Vous avez une question concernant l’application, son utilisation et son financement ? Merci d'envoyer grâce au bouton ci-dessous :</p>
+  <button ion-button full color="button" (click)="onSubmit()">Envoyer un mail</button>
 </ion-content>
