Deleted malfunction.... function.

--- a/Front/autostop/src/pages/home/connexion/main/menu/contact/contact.html
+++ b/Front/autostop/src/pages/home/connexion/main/menu/contact/contact.html
@@ -8,6 +8,6 @@
 
 
 <ion-content padding>
-  <p> Vous avez une question concernant l’application, son utilisation et son financement ? Merci d'envoyer grâce au bouton ci-dessous :</p>
+  <p> Vous avez une question concernant l’application, son utilisation et son financement ? Merci de nous envoyer un mail grâce au bouton ci-dessous, nous vous répondrons dans les plus bref délais !</p>
   <button ion-button full color="button" (click)="onSubmit()">Envoyer un mail</button>
 </ion-content>
