--- a/Front/autostop/src/pages/home/connexion/main/menu/contact/contact.html
+++ b/Front/autostop/src/pages/home/connexion/main/menu/contact/contact.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>contact</ion-title>
+    <ion-title>Contactez-nous</ion-title>
   </ion-navbar>
 
 </ion-header>
