Page Profil et nom dans menu

--- a/Front/autostop/src/pages/home/connexion/main/main.html
+++ b/Front/autostop/src/pages/home/connexion/main/main.html
@@ -1,6 +1,7 @@
 <ion-menu side="left" [content]="content" background-color="menu">
   <ion-content class="custom">
     <img padding id="avatarUser" [src]=testImgUrl>
+    <h3>{{user1.firstName}} {{user1.lastName}}</h3>
     <ion-list no-lines>
       <button ion-item (click)="onNavigate(tabsPage)">
         MON PROFIL
