--- a/Front/autostop/src/pages/home/connexion/main/menu/tabs/tabs.html
+++ b/Front/autostop/src/pages/home/connexion/main/menu/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar> <ion-title>tabs</ion-title> </ion-navbar>
+  <ion-navbar> <ion-title>Mon Profil</ion-title> </ion-navbar>
 </ion-header>
 
 <ion-content padding>
