Branche pour demo à Eric

--- a/Front/autostop/src/pages/home/register/register.html
+++ b/Front/autostop/src/pages/home/register/register.html
@@ -71,7 +71,7 @@
       full
       color="button"
       type="submit"
-      [disabled]="register.valid"
+      [disabled]="!register.valid"
       (click)="validateForm(register.value)"
     >
       CRÉER
