--- a/Front/autostop/src/pages/home/register/driver-infos/driver-infos.html
+++ b/Front/autostop/src/pages/home/register/driver-infos/driver-infos.html
@@ -1,4 +1,3 @@
 <ion-content padding text-center>
-    <h2 padding>Rentrez les informations relatives à votre véhicule :</h2>
-    <h2 padding>[APPELER LE MÊME COMPOSANT "VEHICLE" QUE DANS LES TABS DU MENU]</h2>
+    <page-vehicle></page-vehicle>
 </ion-content>
