--- a/Front/autostop/src/pages/home/connexion/main/main.html
+++ b/Front/autostop/src/pages/home/connexion/main/main.html
@@ -1,6 +1,6 @@
 <ion-menu side="left" [content]="content" background-color="menu">
   <ion-content class="custom">
-    <img padding id="avatarUser" [src]=testImgUrl>
+    <img padding id="avatarUser" [src]="user1.imgUrl">
     <h3>{{user1.firstName}} {{user1.lastName}}</h3>
     <ion-list no-lines>
       <button ion-item (click)="onNavigate(tabsPage)">
