first test polyline

--- a/Front/autostop/src/pages/home/connexion/main/map/map.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/map.html
@@ -1,4 +1,5 @@
 <ion-content>
+  <button (click)="showPoly()">POLY</button>
   <div id="map">
       <page-search-bar (searchValueEmit)='receiveMessage($event)'></page-search-bar>
   </div>
