User class only (Account no more)

--- a/Front/autostop/src/pages/home/connexion/main/menu/tabs/profile/profile.html
+++ b/Front/autostop/src/pages/home/connexion/main/menu/tabs/profile/profile.html
@@ -28,7 +28,7 @@
             <ion-input
               type="email"
               formControlName="email"
-              value="{{ user1.account.email }}"
+              value="{{ user1.email }}"
               placeholder="Adresse mail"
             ></ion-input>
           </ion-item>
@@ -52,7 +52,7 @@
             <ion-input
               type="password"
               formControlName="password"
-              value="{{ user1.account.password }}"
+              value="{{ user1.password }}"
               placeholder="Mot de passe"
             ></ion-input>
           </ion-item>
