--- a/Front/autostop/src/pages/home/connexion/main/map/map.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/map.html
@@ -1,5 +1,7 @@
 <ion-content>
   <button (click)="showPoly()">POLY</button>
+  <button (click)="decodePoly()">DECODEPOLY</button>
+
   <div id="map">
       <page-search-bar (searchValueEmit)='receiveMessage($event)'></page-search-bar>
   </div>
