Images on modales

--- a/Front/autostop/src/pages/home/connexion/main/map/request-modal/request-modal.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/request-modal/request-modal.html
@@ -2,7 +2,7 @@
   <ion-grid>
       <ion-row>
           <ion-col col-6 offset-3>
-            <img class="avatarUser" [src]=testImgUrl>
+            <img class="avatarUser" [src]=matchableUser.imgUrl>
           </ion-col>
         </ion-row>
         <ion-row>
