Fixed modal and placeholder image for menu

--- a/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/response-modal.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/response-modal.html
@@ -17,7 +17,7 @@
     </ion-row>
     <ion-row class="row">
         <ion-col>
-            <img class="avatarUser" [src]=testImgUrl>
+            <img class="avatarUser" [src]=matchableUser.imgUrl>
         </ion-col>
       </ion-row>
     <ion-row class="row">
