--- a/Front/autostop/src/pages/home/connexion/main/main.html
+++ b/Front/autostop/src/pages/home/connexion/main/main.html
@@ -1,7 +1,17 @@
 <ion-menu side="left" [content]="content" background-color="menu">
   <ion-content class="custom">
-    <img padding id="avatarUser" [src]="user1.imgUrl">
-    <h3>{{user1.firstName}} {{user1.lastName}}</h3>
+    <div *ngIf="!user1.imgUrl">
+      <img padding id="avatarUser" [src]="placeholderImg">
+    </div>
+    <div *ngIf="user1.imgUrl">
+      <img padding id="avatarUser" [src]="user1.imgUrl">
+    </div>
+    <div *ngIf="!user1.lastName">
+      <h3>Prénom Nom</h3>
+    </div>
+    <div *ngIf="user1.lastName">
+      <h3>{{user1.firstName}} {{user1.lastName}}</h3>
+    </div>
     <ion-list no-lines>
       <button ion-item (click)="onNavigate(tabsPage)">
         MON PROFIL
