--- a/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/linking/linking.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/linking/linking.html
@@ -1,60 +1,51 @@
-<ion-header>
-
-  <ion-navbar>
-    <ion-title><h2>Driver ou Pieton</h2></ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
 <ion-content padding>
 
-    <ion-grid>
-        <ion-row class="row">
-          <ion-col>
-              <h4>Votre demande a bien été acceptée par</h4>
-          </ion-col>
-        </ion-row>
-        <ion-row class="row">
-          <ion-col>
-              <img class="avatarUser" [src]=testImgUrl>
-          </ion-col>
-        </ion-row>
-        <ion-row class="row">
-          <ion-col>
-            <h3>{{ matchableUser.lastName }}  {{ matchableUser.firstName }}</h3>
-          </ion-col>
+  <ion-grid>
+      <ion-row>
+        <ion-col col-10 offset-1>
+            <h3>Votre demande a bien été acceptée par {{ matchableUser.lastName }}  {{ matchableUser.firstName }}</h3>
+        </ion-col>
       </ion-row>
-        <ion-row class="row">
-          <ion-col>
+        <ion-row>
+            <ion-col col-6 offset-3>
+                <img class="avatarUser" [src]=matchableUser.imgUrl>
+            </ion-col>
+          </ion-row>
+        <ion-row>
+          <ion-col col-8 offset-2>
               <img class="stars"
               [src]="getStar(num)"
               *ngFor="let num of [1,2,3,4,5]">
           </ion-col>
         </ion-row>
-          <ion-row>
-            <ion-col>
-                <ion-item>
-                    <ion-avatar class="car-avatar" item-start>
-                      <img [src]=car.imgCar>
-                    </ion-avatar>
-                    <h3>{{ car.model }} {{ car.color }}</h3>
-                    <p>{{ car.brand }}</p>
-                  </ion-item>
+        <ion-row>
+          <ion-col col-4 offset-4>
+              <img class="avatarUser" [src]=car.imgCar>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col col-6 offset-3>
+              <h3>{{ car.brand }} {{ car.model }} {{ car.color }}
+              </h3>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col col-10 offset-1>
+                <button ion-button full color="button" icon-start>
+                    <ion-icon name="call"></ion-icon>Appeller
+                </button>
             </ion-col>
-          </ion-row>
+        </ion-row>
 
-      </ion-grid>
-      <button ion-button full color="button" icon-start>
-          <ion-icon name="call"></ion-icon>Appeller
-      </button>
-
-      <button ion-button  full color="button" icon-start>
-          <ion-icon name="mail"></ion-icon>Envoyer un SMS
-      </button>
-
-      <button ion-button (click)="goToRate()" icon-start>
-          <ion-icon name="star"></ion-icon>Noter le trajet
-      </button>
-
+        <ion-row>
+            <ion-col col-10 offset-1>
+                <button ion-button  full color="button" icon-start>
+                    <ion-icon name="mail"></ion-icon>Envoyer un SMS
+                </button>
+          </ion-col>
+        </ion-row>
+        <button ion-button (click)="goToRate()" icon-start>
+            <ion-icon name="star"></ion-icon>Noter le trajet
+        </button>
+    </ion-grid>
 </ion-content>
