tests request direction

--- a/Front/autostop/src/pages/home/connexion/main/map/map.html
+++ b/Front/autostop/src/pages/home/connexion/main/map/map.html
@@ -1,6 +1,6 @@
 <ion-content>
   <button (click)="showPoly()">POLY</button>
-  <button (click)="decodePoly()">DECODEPOLY</button>
+  <button (click)="showRoute()">showroute</button>
 
   <div id="map">
       <page-search-bar (searchValueEmit)='receiveMessage($event)'></page-search-bar>
