--- a/Front/autostop/src/pages/home/connexion/main/menu/tabs/profile/profile.html
+++ b/Front/autostop/src/pages/home/connexion/main/menu/tabs/profile/profile.html
@@ -40,14 +40,24 @@
               placeholder="Sexe"
             ></ion-input>
           </ion-item>
-          <ion-item>
+          <ion-item id="dateOfBirth">
+            <ion-datetime
+              placeholder={{user1.dateOfBirth}}
+              displayFormat="DD/MM/YYYY"
+              pickerFormat="DD/MM/YYYY"
+              min="1918"
+              [(ngModel)]="myDate"
+              formControlName="dateOfBirth"
+            ></ion-datetime>
+          </ion-item>
+          <!-- <ion-item>
             <ion-input
               type="text"
               formControlName="dateOfBirth"
               value="{{ user1.dateOfBirth }}"
               placeholder="Date de Naissance"
             ></ion-input>
-          </ion-item>
+          </ion-item> -->
           <ion-item>
             <ion-input
               type="password"
@@ -62,7 +72,7 @@
             full
             color="button"
             type="submit"
-            [disabled]="updateProfil.valid"
+            [disabled]="!updateProfil.valid"
             (click)="validateForm(updateProfil.value)"
           >
             Mettre à jour
