Logged Bearer JWT in console

--- a/Front/autostop/src/pages/home/connexion/connexion.html
+++ b/Front/autostop/src/pages/home/connexion/connexion.html
@@ -24,7 +24,7 @@
       color="button"
       type="submit"
       [disabled]="!connexion.valid"
-      [navPush]="main"
+      (click)="validateForm(connexion.value)"
     >
       CONNEXION
     </button>
